# blog-webapp

./: README.md  pyproject.toml
django_file/: db.sqlite3  manage.py
django_file/blog/: admin.py  forms.py  models.py  urls.py  views.py
django_file/blog/migrations/: 0001_initial.py  0002_auto_20201104_1054.py  0003_auto_20201124_1309.py  0004_auto_20201124_1310.py
django_file/blog/static/: contact.css  home.css
django_file/blog/templates/blog/: about.html  base.html  contact.html  home.html  post_confirm_delete.html  post_detail.html  post_form.html
django_file/django_file/: asgi.py  settings.py  urls.py  wsgi.py
django_file/users/: admin.py  forms.py  models.py  views.py
django_file/users/migrations/: 0001_initial.py
django_file/users/templates/users/: login.html  profile.html  register.html
tests/: test_django_project.py
