[tool.poetry]
name = "django_project"
version = "0.1.0"
description = ""
authors = ["ugauniyal <ugauniyal@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
Pillow = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
